--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,208 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 100px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  padding: 0px;
+  background-color: #383838;
+  /* Control Pseudo RESPONSIVENESS */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  padding: 0;
+  list-style: none;
+  display: table;
+}
+
+li {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.item {
+  position: relative;
+  display: flex;
+  display: inline-flex;
+  flex-wrap: nowrap;
+  gap: 24px;
+  margin-right: 12px;
+}
+
+.section {
+  margin: 0;
+  padding: 24px;
+  background-color: #efefef;
+  position: relative;
+  max-width: 40vw;
+  flex-wrap:wrap;
+}
+
+.Input-field {
+  margin: 4px;
+  padding: 8px;
+  top: 0;
+  left: 0;
+  position: relative;
+  display: flex;
+  color: #151515;
+}
+
+.cta-btn {
+  font-weight: bold;
+  font-size: 14px;
+  color: #000;
+  background-color: #fff;
+  padding: 10px 30px;
+  border: solid #202020 2px;
+  transition: 0.6s;
+  transform: translateY(0);
+  /* display: flex;
+  flex-direction: row; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  cursor: pointer;
+  margin: 12px 12px 0px 0px;
+  gap: 12px;
+}
+
+.cta-btn:hover {
+  transition: 1000ms;
+  padding: 10px 24px;
+  transform: translateY(-0px);
+  background-color: #eeeeee6a;
+  border: solid 2px #000;
+}
+
+.text-label {
+  font-weight: bold;
+  font-size: 14px;
+  color: #000;
+  letter-spacing: 0.8px;
+  margin: 0px 20px 0px 2px;
+  position: absolute;
+  display: flex;
+  justify-content: left;
+}
+/* Substitute to position this stupid textbox to right */
+.right {
+  position: relative;
+  display: flex;
+  justify-content: right;
+  right: 12px;
+}
+
+input,
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  text-decoration: none;
+  margin: 4px 4px 4px 40px;
+  color: #333;
+  font-size: inherit;
+  background-color: #ffffff;
+  padding: 12px 8px 12px 8px;
+  border: 1px solid #fff;
+  appearance: none;
+  transition: all 0.6s ease;
+  position: relative;
+  display: flex;
+  width: 25vw;
+  /* border: 1px solid #151515; */
+}
+
+/* Display results */
+
+.profile {
+  display: inline-flex;
+  position: relative;
+  box-shadow: 0 1px 25px #00000033;
+  margin: 8px;
+  padding: 12px;
+  border-radius: 6px;
+  flex-wrap: wrap;
+  transition: all 0.3s;
+}
+
+.profile:hover {
+  box-shadow: 0 1px 25px #3030305b;
+  margin: 12px;
+  border-radius: 8px;
+}
+.user-img {
+  display: block;
+  background-color: #000;
+  height: 100px;
+  width: 100px;
+  
+  transition: all 0.6s ease;
+  position: relative;
+  display: flex;
+}
+
+.user-name {
+  font-weight: bold;
+  color: #000;
+  
+}
+
+.user-data {
+display: inline-flex;
+  border-radius: 6px;
+  margin: 0px;
+  gap: 12px;
+  margin: 8px;
+}
+
+.user-title {
+  font-weight: bold;
+  color: #000;
+  display: inline-flex;
+}
+
+.user-info {
+  display: inline-flex;
+  position: relative;
+  flex-wrap: wrap;
+  color: #000;
+  gap:  8px;
+  
+}
+
+.user-section {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+/* Table design info */
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  font-weight: bold;
+  text-align: left;
+  padding: 8px;
+  background-color: #000000;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+tr:nth-child(even) {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tr:nth-child(odd) {
+  background-color: white;
+}
+
+td {
+  padding: 8px;
 }
