--- a/src/App.css
+++ b/src/App.css
@@ -41,14 +41,22 @@ li {
 .form {
   margin: 0;
   padding: 24px;
-  background-color: #efefef;
+  background-color: #e6e6e6;
   border-radius: 4px;
   display: inline-flex;
   position: relative;
-  width: 20vw;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
+  
+  
+  width: 25vw;
 }
+
+.form-section {
+  margin: 0;
+  padding: 0;
+}
+
 
 .Input-field {
   margin: 4px;
@@ -60,9 +68,11 @@ li {
 }
 
 label {
- 
-  display: inline-flex;
-  position: relative;
+ flex-wrap: wrap;
+ flex-direction: column;
+  display: flex;
+  align-content: space-around;
+  width: auto;
 }
 
 .cta-btn {
@@ -77,7 +87,7 @@ label {
   /* display: flex;
   flex-direction: row; */
   align-items: center;
-  cursor: pointer;
+  
   margin: 12px 12px 0px 0px;
   gap: 12px;
 }
@@ -88,6 +98,7 @@ label {
   transform: translateY(-0px);
   background-color: #eeeeee6a;
   border: solid 2px #000;
+  cursor: pointer;
 }
 
 .cta-btn2 {
@@ -98,12 +109,11 @@ label {
   padding: 4px 10px;
   border: solid #202020 2px;
   transition: 0.6s;
-  /* display: flex;
-  flex-direction: row; */
+  display: inline-flex;
   align-items: center;
-  cursor: pointer;
-  margin: 12px 12px 0px 0px;
+  margin: 8px;
   gap: 8px;
+  width: auto;
 }
 
 .text-label {
@@ -119,9 +129,10 @@ label {
 /* Substitute to position this stupid textbox to right */
 .right {
   position: relative;
-  display: flex;
+  
+  flex-wrap: nowrap;
   justify-content: right;
-  right: 12px;
+  float: right;
 }
 
 input,
@@ -130,7 +141,7 @@ textarea:focus,
 select:focus {
   outline: none;
   text-decoration: none;
-  margin: 4px 4px 4px 40px;
+  margin: 4px;
   color: #333;
   font-size: inherit;
   background-color: #ffffff;
@@ -138,39 +149,40 @@ select:focus {
   border: 1px solid #fff;
   appearance: none;
   transition: all 0.6s ease;
-  position: relative;
-  display: flex;
-  /* border: 1px solid #151515; */
-  justify-content: left;
+  display: inline-flex;
+  
 }
 
 /* Display results */
 
 .profile {
-  display: inline-flex;
   position: relative;
-  box-shadow: 0 1px 25px #00000033;
-  margin: 8px;
+  box-shadow: 0 1px 15px #00000033;
+  margin: 8px 0 0 0 ;
   padding: 12px;
-  border-radius: 6px;
+  border-radius: 4px;
   flex-wrap: wrap;
-  transition: all 0.3s;
+  transition: all 0.4s;
+  background-color: #efefef;
 }
 
 .profile:hover {
-  box-shadow: 0 1px 25px #3030305b;
-  margin: 12px;
+  box-shadow: 0 1px 26px #3030305b;
+  margin: 4px;
   border-radius: 8px;
+  cursor: pointer;
 }
+
 .user-img {
   display: block;
-  background-color: #000;
+  background-color: #8471ff;
   height: 100px;
   width: 100px;
   
   transition: all 0.6s ease;
   position: relative;
   display: flex;
+  object-fit: cover;
 }
 
 .user-name {
@@ -181,10 +193,9 @@ select:focus {
 
 .user-data {
 display: inline-flex;
-  border-radius: 6px;
-  margin: 0px;
   gap: 12px;
   margin: 8px;
+  flex-wrap: wrap;
 }
 
 .user-title {
@@ -206,23 +217,24 @@ display: inline-flex;
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 /* Table design info */
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 90%;
 }
 
 th {
   font-weight: bold;
   text-align: left;
   padding: 8px;
-  background-color: #000000;
-  color: white;
+  background-color: #151515;
+  color: #ffffff;
+  
 }
-
+/* Colour Alternatatio between black and white
 tr:nth-child(even) {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
@@ -230,10 +242,14 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
   background-color: white;
-}
+} */
 
 td {
+
   padding: 8px;
+  margin: 0;
+  flex-wrap: nowrap;
+  width: auto;
 }
 
 .nav {
@@ -273,21 +289,38 @@ td {
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
-  width: 15vw;
   height: 100vh;
-  display: flex;
+  display: inline-flex;
   position: absolute;
 }
 
 .mainSection{
 
-  display: grid;
   position: relative;
-  grid-template-columns: 400px auto;
-  grid-template-rows: auto auto;
+  display: inline-flex;
   gap: 12px;
   flex-wrap: wrap;
   height: 100vh;
   width: 100vw;
+  
+}
+
+.btn-area {
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  position: relative;
+}
+
+.searchbar {
+ display: inline-flex;
+  transition: all 0.8s ease;
+  
+}
+
+.icon {
+  width: 34px;
+  margin: 8px;
+  position: relative;
   
 }
