--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,38 @@
   pointer-events: none;
 }
 
+/* LAYOUT CLASSES FOR JS MAIN COMPONENT MANAGER */
+.layout {
+  width: auto;
+
+  display: grid;
+  grid:
+    "sidebar body" 1fr
+    / auto 1fr;
+  gap: 8px;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  color: #e6e6e6;
+}
+a {
+  color: #e6e6e6;
+  text-decoration: none;
+}
+
+.body {
+  grid-area: body;
+  
+}
+
 body {
   margin: 0;
   padding: 0px;
-  background-color: #383838;
-  
+ display: block;
   /* Control Pseudo RESPONSIVENESS */
   display: inline-flex;
-  position: relative;
+  
 }
 
 ul {
@@ -39,24 +63,31 @@ li {
 }
 
 .form {
-  margin: 0;
-  padding: 24px;
-  background-color: #e6e6e6;
-  border-radius: 4px;
-  display: inline-flex;
-  position: relative;
-  flex-direction: row;
+  min-width: 32vw;
+	background: #eeeeee;
+	
   flex-wrap: wrap;
-  
-  
-  width: 25vw;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+
+  max-width: auto;
 }
 
 .form-section {
   margin: 0;
   padding: 0;
+  width: 100%;
+
+  display: flex;
+  gap: 16px;
 }
 
+.section {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+}
 
 .Input-field {
   margin: 4px;
@@ -64,12 +95,11 @@ li {
   top: 0;
   left: 0;
   color: #151515;
-  
 }
 
 label {
- flex-wrap: wrap;
- flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: column;
   display: flex;
   align-content: space-around;
   width: auto;
@@ -87,7 +117,7 @@ label {
   /* display: flex;
   flex-direction: row; */
   align-items: center;
-  
+
   margin: 12px 12px 0px 0px;
   gap: 12px;
 }
@@ -129,7 +159,7 @@ label {
 /* Substitute to position this stupid textbox to right */
 .right {
   position: relative;
-  
+
   flex-wrap: nowrap;
   justify-content: right;
   float: right;
@@ -150,7 +180,6 @@ select:focus {
   appearance: none;
   transition: all 0.6s ease;
   display: inline-flex;
-  
 }
 
 /* Display results */
@@ -158,7 +187,7 @@ select:focus {
 .profile {
   position: relative;
   box-shadow: 0 1px 15px #00000033;
-  margin: 8px 0 0 0 ;
+  margin: 8px 0 0 0;
   padding: 12px;
   border-radius: 4px;
   flex-wrap: wrap;
@@ -173,26 +202,30 @@ select:focus {
   cursor: pointer;
 }
 
-.user-img {
-  display: block;
-  background-color: #8471ff;
-  height: 100px;
-  width: 100px;
-  
-  transition: all 0.6s ease;
-  position: relative;
-  display: flex;
+.avatar {
+  transition: all 0.4s;
   object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50px;
+  display: block;
+}
+
+.avatar-thumbnail {
+  max-width: 12px;
+  max-height: px;
+  border-radius: 50px;
+  background-color: #3053ff;
+  position: relative;
 }
 
 .user-name {
   font-weight: bold;
   color: #000;
-  
 }
 
 .user-data {
-display: inline-flex;
+  display: inline-flex;
   gap: 12px;
   margin: 8px;
   flex-wrap: wrap;
@@ -209,8 +242,7 @@ display: inline-flex;
   position: relative;
   flex-wrap: wrap;
   color: #000;
-  gap:  8px;
-  
+  gap: 8px;
 }
 
 .user-section {
@@ -232,7 +264,6 @@ th {
   padding: 8px;
   background-color: #151515;
   color: #ffffff;
-  
 }
 /* Colour Alternatatio between black and white
 tr:nth-child(even) {
@@ -245,7 +276,6 @@ tr:nth-child(odd) {
 } */
 
 td {
-
   padding: 8px;
   margin: 0;
   flex-wrap: nowrap;
@@ -256,7 +286,6 @@ td {
   flex-wrap: wrap;
   flex-direction: column;
   align-content: start;
-  display: block;
   font-weight: bold;
   font-size: 14px;
   background-color: #3053ff;
@@ -264,11 +293,10 @@ td {
   text-transform: uppercase;
   letter-spacing: 2px;
   padding: 30px;
-  align-items: center;
   margin: 0px;
-  
-  width: 12vw;
-  height: 100vh;
+
+  width: 10vw;
+  height: 95vh;
 }
 
 .navLinks {
@@ -285,24 +313,24 @@ td {
   background-color: #333;
 }
 
-.Section{
+.Section {
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
   height: 100vh;
   display: inline-flex;
   position: absolute;
+  width: auto;
+  height: auto; 
 }
 
-.mainSection{
-
+.mainSection {
   position: relative;
   display: inline-flex;
   gap: 12px;
   flex-wrap: wrap;
   height: 100vh;
   width: 100vw;
-  
 }
 
 .btn-area {
@@ -313,14 +341,71 @@ td {
 }
 
 .searchbar {
- display: inline-flex;
+  display: inline-flex;
   transition: all 0.8s ease;
-  
 }
 
 .icon {
   width: 34px;
   margin: 8px;
   position: relative;
-  
+}
+
+/* Menu design*/
+.menu-items {
+  z-index: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.card-item {
+  margin: 30px auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 30px 7px #05050550;
+  cursor: pointer;
+  transition: 0.6s;
+  background-color: #f0f0f0;
+}
+
+.main-menu {
+  width: 100%;
+
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.thumbnail {
+  object-fit: cover;
+  max-width: 32vw;
+}
+.cover-card {
+  box-shadow: 5px 5px 32px 7px #0505055d;
+  position: absolute;
+  border: 4px solid #202020;
+  flex-wrap: wrap;
+  transition: all 0.4s;
+  display: flex;
+  /* max-width: 50vw; */
+  margin: 0px 120px 0px 130px;
+}
+
+.register {
+  margin: 20px;
+  padding: 0;
+}
+
+.title{
+  font-weight: 800;
+  font-size: 48px;
+  text-align: center;
+  margin:  0 0 0 128px;
+  text-transform: uppercase;
 }
